--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "Demo to show off how to switch between email providers using LaunchDarkly",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Tilde Thurium",
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "nodemon": "^3.1.7",
+    "serve-static": "^1.16.2"
   }
 }
