--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "Tilde Thurium",
   "license": "MIT",
   "dependencies": {
+    "@launchdarkly/node-server-sdk": "^9.7.0",
+    "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
+    "resend": "^4.0.1-alpha.0",
     "serve-static": "^1.16.2"
   }
 }
