--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "mailgun.js": "^10.2.3",
     "nodemon": "^3.1.7",
     "resend": "^4.0.1-alpha.0",
     "serve-static": "^1.16.2"
